..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
A......... [ZBX-8132] fixed image.get not properly returning all images for sysmaps (Krists)
...G...... [ZBX-8108] fixed reading /proc virtual files without rewinding the file position (Juris)
...G...... [ZBX-5243] increased the length of program name and command line that proc.mem[] and proc.num[] can match on AIX; thanks to Boris Manojlovic for patch (asaveljevs)
...G...... [ZBX-7448] fixed Windows agents limit check (Nikolaj, wiper)
..F....... [ZBX-7335] improved element copy dialog by having hosts, templates and host group in separate target types and empty groups are not shown (Krists)
.......PS. [ZBX-3336] fixed autodiscovery rule doesn't clear/rescan hosts in dhosts/dservices (Nikolaj)
..F....... [ZBX-6497] improved frontend filters, Filter and Reset now is submit buttons, removed JS form reset scripts, changed filter data saving process in profiles (Oleg)
..F....... [ZBX-2840] fixed map configuration with broken images (Eduard)
..F....... [ZBX-6596] fixed trigger sorting by hostname (Eduard)
..F....... [ZBX-8012] made links to other IT services from the dependency management to open in a new browser tab (Eduard, Oleg)
..F....... [ZBX-7624] fixed pie charts legend alignment (Eduard)
..F....... [ZBX-8029] changed built-in font size from 0 to 1 for Zabbix home page and date in maps and graphs to support image functions for HHVM (Ivo)
A......... [ZBX-7625] changed the execution order of API checks (Oleg)
..F....... [ZBX-8032] enabled hyperlinks in host inventory overview page (Eduard)
..F....... [ZBX-7120] fixed undefined index in menu for event csv export (Eduard)