@@ -72,8 +72,6 @@ static DB_RESULT	discovery_get_dhost_by_ip(zbx_uint64_t druleid, const char *ip)
  *                                                                            *
  * Parameters: host ip address                                                *
  *                                                                            *
- * Author: Alexander Vladishev                                                *
- *                                                                            *
  ******************************************************************************/
 static void	discovery_separate_host(DB_DRULE *drule, DB_DHOST *dhost, const char *ip)
 {
@@ -130,8 +128,6 @@ static void	discovery_separate_host(DB_DRULE *drule, DB_DHOST *dhost, const char
  * Purpose: register host if one does not exist                               *
  *                                                                            *
  * Parameters: host ip address                                                *
- *                                                                            *
- * Author: Alexei Vladishev                                                   *
  *                                                                            *
  ******************************************************************************/
 static void	discovery_register_host(DB_DRULE *drule, DB_DCHECK *dcheck, DB_DHOST *dhost,
@@ -204,8 +200,6 @@ static void	discovery_register_host(DB_DRULE *drule, DB_DCHECK *dcheck, DB_DHOST
  *                                                                            *
  * Parameters: host ip address                                                *
  *                                                                            *
- * Author: Alexei Vladishev                                                   *
- *                                                                            *
  ******************************************************************************/
 static void	discovery_register_service(DB_DRULE *drule, DB_DCHECK *dcheck,
 		DB_DHOST *dhost, DB_DSERVICE *dservice, const char *ip, const char *dns,
@@ -247,6 +241,7 @@ static void	discovery_register_service(DB_DRULE *drule, DB_DCHECK *dcheck,
 
 			dservice->dserviceid = DBget_maxid("dservices");
 			dservice->status = DOBJECT_STATUS_DOWN;
+			dservice->value = zbx_strdup(dservice->value, "");
 
 			dns_esc = DBdyn_escape_string_len(dns, INTERFACE_DNS_LEN);
 
@@ -267,7 +262,7 @@ static void	discovery_register_service(DB_DRULE *drule, DB_DCHECK *dcheck,
 		dservice->status = atoi(row[2]);
 		dservice->lastup = atoi(row[3]);
 		dservice->lastdown = atoi(row[4]);
-		strscpy(dservice->value, row[5]);
+		dservice->value = zbx_strdup(dservice->value, row[5]);
 
 		if (dhostid != dhost->dhostid)
 		{
@@ -307,17 +302,16 @@ static void	discovery_register_service(DB_DRULE *drule, DB_DCHECK *dcheck,
  *                                                                            *
  * Purpose: update discovered service details                                 *
  *                                                                            *
- * Author: Alexei Vladishev                                                   *
- *                                                                            *
  ******************************************************************************/
-static void	discovery_update_dservice(DB_DSERVICE *service)
+static void	discovery_update_dservice(zbx_uint64_t dserviceid, int status, int lastup, int lastdown,
+		const char *value)
 {
 	char	*value_esc;
 
-	value_esc = DBdyn_escape_string_len(service->value, DSERVICE_VALUE_LEN);
+	value_esc = DBdyn_escape_string_len(value, DSERVICE_VALUE_LEN);
 
 	DBexecute("update dservices set status=%d,lastup=%d,lastdown=%d,value='%s' where dserviceid=" ZBX_FS_UI64,
-			service->status, service->lastup, service->lastdown, value_esc, service->dserviceid);
+			status, lastup, lastdown, value_esc, dserviceid);
 
 	zbx_free(value_esc);
 }
@@ -327,17 +321,15 @@ static void	discovery_update_dservice(DB_DSERVICE *service)
  * Function: discovery_update_dservice_value                                  *
  *                                                                            *
  * Purpose: update discovered service details                                 *
- * Author: Alexei Vladishev                                                   *
  *                                                                            *
  ******************************************************************************/
-static void	discovery_update_dservice_value(DB_DSERVICE *service)
+static void	discovery_update_dservice_value(zbx_uint64_t dserviceid, const char *value)
 {
 	char	*value_esc;
 
-	value_esc = DBdyn_escape_string_len(service->value, DSERVICE_VALUE_LEN);
+	value_esc = DBdyn_escape_string_len(value, DSERVICE_VALUE_LEN);
 
-	DBexecute("update dservices set value='%s' where dserviceid=" ZBX_FS_UI64,
-			value_esc, service->dserviceid);
+	DBexecute("update dservices set value='%s' where dserviceid=" ZBX_FS_UI64, value_esc, dserviceid);
 
 	zbx_free(value_esc);
 }
@@ -348,12 +340,14 @@ static void	discovery_update_dservice_value(DB_DSERVICE *service)
  *                                                                            *
  * Purpose: process and update the new service status                         *
  *                                                                            *
- * Author: Alexander Vladishev                                                *
- *                                                                            *
  ******************************************************************************/
-static void	discovery_update_service_status(DB_DSERVICE *dservice, int status, const char *value, int now)
+static void	discovery_update_service_status(const DB_DSERVICE *dservice, int status, const char *value, int now)
 {
+	const char	*__function_name = "discovery_update_service_status";
+
 	zbx_timespec_t	ts;
+
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	ts.sec = now;
 	ts.ns = 0;
@@ -362,30 +356,20 @@ static void	discovery_update_service_status(DB_DSERVICE *dservice, int status, c
 	{
 		if (DOBJECT_STATUS_DOWN == dservice->status || 0 == dservice->lastup)
 		{
-			dservice->status = status;
-			dservice->lastdown = 0;
-			dservice->lastup = now;
-
-			zbx_strlcpy(dservice->value, value, sizeof(dservice->value));
-			discovery_update_dservice(dservice);
+			discovery_update_dservice(dservice->dserviceid, status, now, 0, value);
 			add_event(0, EVENT_SOURCE_DISCOVERY, EVENT_OBJECT_DSERVICE, dservice->dserviceid, &ts,
 					DOBJECT_STATUS_DISCOVER, NULL, NULL, 0, 0);
 		}
 		else if (0 != strcmp(dservice->value, value))
 		{
-			zbx_strlcpy(dservice->value, value, sizeof(dservice->value));
-			discovery_update_dservice_value(dservice);
+			discovery_update_dservice_value(dservice->dserviceid, value);
 		}
 	}
 	else	/* DOBJECT_STATUS_DOWN */
 	{
 		if (DOBJECT_STATUS_UP == dservice->status || 0 == dservice->lastdown)
 		{
-			dservice->status = status;
-			dservice->lastdown = now;
-			dservice->lastup = 0;
-
-			discovery_update_dservice(dservice);
+			discovery_update_dservice(dservice->dserviceid, status, 0, now, dservice->value);
 			add_event(0, EVENT_SOURCE_DISCOVERY, EVENT_OBJECT_DSERVICE, dservice->dserviceid, &ts,
 					DOBJECT_STATUS_LOST, NULL, NULL, 0, 0);
 		}
@@ -394,6 +378,8 @@ static void	discovery_update_service_status(DB_DSERVICE *dservice, int status, c
 			NULL, NULL, 0, 0);
 
 	process_events();
+
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
 /******************************************************************************
@@ -401,8 +387,6 @@ static void	discovery_update_service_status(DB_DSERVICE *dservice, int status, c
  * Function: discovery_update_dhost                                           *
  *                                                                            *
  * Purpose: update discovered host details                                    *
- *                                                                            *
- * Author: Alexei Vladishev                                                   *
  *                                                                            *
  ******************************************************************************/
 static void	discovery_update_dhost(DB_DHOST *dhost)
@@ -416,8 +400,6 @@ static void	discovery_update_dhost(DB_DHOST *dhost)
  * Function: discovery_update_host_status                                     *
  *                                                                            *
  * Purpose: update new host status                                            *
- *                                                                            *
- * Author: Alexander Vladishev                                                *
  *                                                                            *
  ******************************************************************************/
 static void	discovery_update_host_status(DB_DHOST *dhost, int status, int now)
@@ -467,8 +449,6 @@ static void	discovery_update_host_status(DB_DHOST *dhost, int status, int now)
  *                                                                            *
  * Parameters: host - host info                                               *
  *                                                                            *
- * Author: Alexander Vladishev                                                *
- *                                                                            *
  ******************************************************************************/
 void	discovery_update_host(DB_DHOST *dhost, const char *ip, int status, int now)
 {
@@ -490,18 +470,16 @@ void	discovery_update_host(DB_DHOST *dhost, const char *ip, int status, int now)
  *                                                                            *
  * Parameters: service - service info                                         *
  *                                                                            *
- * Author: Alexei Vladishev                                                   *
- *                                                                            *
  ******************************************************************************/
-void	discovery_update_service(DB_DRULE *drule, DB_DCHECK *dcheck, DB_DHOST *dhost,
-		const char *ip, const char *dns, int port, int status, const char *value, int now)
+void	discovery_update_service(DB_DRULE *drule, DB_DCHECK *dcheck, DB_DHOST *dhost, const char *ip, const char *dns,
+		int port, int status, const char *value, int now)
 {
 	const char	*__function_name = "discovery_update_service";
 
 	DB_DSERVICE	dservice;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In %s() ip:'%s' port:%d status:%d",
-			__function_name, ip, port, status);
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s() ip:'%s' dns:'%s' port:%d status:%d value:'%s'",
+			__function_name, ip, dns, port, status, value);
 
 	memset(&dservice, 0, sizeof(dservice));
 
@@ -516,6 +494,8 @@ void	discovery_update_service(DB_DRULE *drule, DB_DCHECK *dcheck, DB_DHOST *dhos
 	/* service was not registered because we do not add down service */
 	if (0 != dservice.dserviceid)
 		discovery_update_service_status(&dservice, status, value, now);
+
+	zbx_free(dservice.value);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
